# opencv_mouse_sim

./: CMakeLists.txt  README.md  prsti_hist.cpp
