PROJECT(imgproc)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

IF (NOT BUILD_ROOT)
    GET_FILENAME_COMPONENT(BUILD_ROOT ${CMAKE_CURRENT_BINARY_DIR} ABSOLUTE)
ENDIF()

FIND_PACKAGE(OpenCV REQUIRED)
LINK_LIBRARIES(${OpenCV_LIBS})
INCLUDE_DIRECTORIES(AFTER ${CMAKE_CURRENT_BINARY_DIR} ${OpenCV_INCLUDE_DIR})

ADD_EXECUTABLE(prsti_hist prsti_hist.cpp)
ADD_EXECUTABLE(test test.cpp)
